--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -1,14 +1,16 @@
-<!DOCTYPE HTML>
+<!doctype html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <head>
         <title>Community</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="/css/bootstrap.min.css">
         <link rel="stylesheet" href="/css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="/css/community.css">
-        <script src="/js/jquery-3.4.1.min.js"></script>
+        <script src="/js/jquery-3.4.1.min.js" type="application/javascript"></script>
         <script src="/js/bootstrap.min.js" type="application/javascript"></script>
+        <script src="/js/community.js" type="application/javascript"></script>
     </head>
 </head>
 <body>
