--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,25 +1,25 @@
-<!DOCTYPE HTML>
+<!doctype html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Community</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="/css/community.css">
-    <script src="/js/jquery-3.4.1.min.js"></script>
+    <script src="/js/jquery-3.4.1.min.js" type="application/javascript"></script>
     <script src="/js/bootstrap.min.js" type="application/javascript"></script>
-    <script type="application/javascript">
-        window.onload = function () {
-            var closable = window.localStorage.getItem("closable");
-            if (closable == "true") {
-                window.close();
-                window.localStorage.removeItem("closable");
-            }
-        }
-    </script>
-
+    <script src="/js/community.js" type="application/javascript"></script>
 </head>
-
+<script type="application/javascript">
+    window.onload = function () {
+        var closable = window.localStorage.getItem("closable");
+        if (closable == "true") {
+            window.close();
+            window.localStorage.removeItem("closable");
+        }
+    }
+</script>
 
 
 <body>
