--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -11,6 +11,14 @@
     <script src="/js/bootstrap.min.js" type="application/javascript"></script>
     <script src="/js/community.js" type="application/javascript"></script>
     <script src="/js/moment.js" type="application/javascript"></script>
+
+    <!--    markdown-->
+    <link rel="stylesheet" href="/css/editormd.min.css">
+    <link rel="stylesheet" href="/css/editormd.preview.min.css">
+    <script src="/js/editormd.min.js" type="application/javascript"></script>
+    <script src="/js/moment.js" type="application/javascript"></script>
+    <script src="/js/lib/marked.min.js"></script>
+    <script src="/js/lib/prettify.min.js"></script>
 </head>
 <body>
 <div th:insert="~{navigation :: nav}"></div>
@@ -29,10 +37,10 @@
             </span>
                 <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 
-                <!--内容-->
-                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                    <span th:text="${question.description}"></span>
-                </div>
+<!--                &lt;!&ndash;内容&ndash;&gt;-->
+<!--                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">-->
+<!--                    <span th:text="${question.description}"></span>-->
+<!--                </div>-->
 
 
 <!--                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 top-header"-->
@@ -44,15 +52,15 @@
 <!--                </div>-->
 
 
-<!--                &lt;!&ndash;内容&ndash;&gt;-->
-<!--                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" id="question-view">-->
-<!--                    <textarea style="display:none;" th:text="${question.description}"></textarea>-->
-<!--                </div>-->
-<!--                <script type="text/javascript">-->
-<!--                    $(function () {-->
-<!--                        editormd.markdownToHTML("question-view", {});-->
-<!--                    });-->
-<!--                </script>-->
+                <!--内容-->
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" id="question-view">
+                    <textarea style="display:none;" th:text="${question.description}"></textarea>
+                </div>
+                <script type="text/javascript">
+                    $(function () {
+                        editormd.markdownToHTML("question-view", {});
+                    });
+                </script>
 
 <!--                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"-->
 <!--                     th:if="${!#lists.isEmpty(#httpServletRequest.getServletContext().getAttribute('FOOTER'))}"-->
