增加搜索功能 增加尾页

--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -122,6 +122,6 @@
         </div>
     </div>
 </div>
-<!--<div th:insert="~{footer :: foot}"></div>-->
+<div th:insert="~{footer::foot}"></div>
 </body>
 </html>
