--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -103,6 +103,7 @@
         </div>
     </div>
 </div>
-<!--<div th:insert="~{footer :: foot}"></div>-->
+<div th:insert="~{footer::foot}"></div>
 </body>
+
 </html>
