--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -218,6 +218,6 @@
         </div>
     </div>
 </div>
-<!--<div th:insert="~{footer :: foot}"></div>-->
+<div th:insert="~{footer::foot}"></div>
 </body>
 </html>
