--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -92,8 +92,16 @@
             <h3>热门话题</h3>
             <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                <h4>Community</h4>
-                <img class="img-thumbnail question-wechat" src="/images/logo.png" alt="..">
+                <h4>Weather</h4>
+                <img class="img-thumbnail question-wechat" th:src="@{'/images/weathercn/'+${weather.getImgIdx()}+'.png'}" alt="..">
+                <span th:text="${weather.getWeekIdx()}"></span>
+                <span th:text="${weather.getWeather()}"></span>
+
+                <div th:each="future:${weather.getFutureWeather()}">
+                    <img class="img-thumbnail question-wechat" th:src="@{'/images/weathercn/'+${future.getImgIdx()}+'.png'}" alt="..">
+                    <span th:text="${future.getWeekIdx()}"></span>
+                    <span th:text="${future.getWeather()}"></span>
+                </div>
             </div>
         </div>
     </div>
