--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -89,7 +89,9 @@
 
         </div>
         <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
-            <h3>热门话题</h3>
+            <div style="margin: 10px">
+                <button id="chat" th:data-user="${session.user.getName()}" class="btn-primary btn-lg btn" onclick="chat(this)" >聊天室</button>
+            </div>
             <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <h4>Weather</h4>
@@ -102,7 +104,10 @@
                     <span th:text="${future.getWeekIdx()}"></span>
                     <span th:text="${future.getWeather()}"></span>
                 </div>
+
             </div>
+
+
         </div>
     </div>
 </div>
