--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -88,11 +88,11 @@
                             </h5>
                             <div th:text="${comment.content}"></div>
                             <div class="menu">
-<!--                                <span class="glyphicon glyphicon-thumbs-up icon"></span>-->
-
                                 <span th:id="${'thumb-'+comment.id}" th:data-id="${comment.id+'/'+session.user.id+'/'+question.id}" onclick="thumbComments(this)" class="thumbComment-icon" th:if="${session.user!=null}">
-                                      <span class="glyphicon glyphicon-thumbs-up icon"></span>
-                                      <span id="thumbChildElement" th:text="${comment.likeCount}"></span>
+
+                                    <span th:if="${comment.isLike==null || comment.isLike==false}" class="glyphicon glyphicon-thumbs-up icon"></span>
+                                    <span th:if="${comment.isLike==true}" class="glyphicon glyphicon-thumbs-up icon" style="color: rgb(212, 106, 64);"></span>
+                                    <span id="thumbChildElement" th:text="${comment.likeCount}"></span>
                                  </span>
 
                                 <span th:data-id="${comment.id}"
