--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -51,6 +51,7 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a href="/profile/questions">我的问题</a></li>
+                            <li><a href="/userinfo">个人信息</a></li>
                             <li><a href="/logout">退出登录</a></li>
                         </ul>
                     </li>
