--- a/src/main/resources/templates/userinfo.html
+++ b/src/main/resources/templates/userinfo.html
@@ -21,11 +21,11 @@
     <div class="col-md-4">
         <div style="margin-top: 20%">
             <form enctype="multipart/form-data" action="/updateInfo" method="post">
-                <div class="form-group">
+                <div>
                     <label for="username">昵称</label>
                     <input class="form-control" id="username" name="username" th:value="${user.name}">
                 </div>
-                <div class="form-group">
+                <div>
                     <label for="bio">个人简介</label>
                     <textarea class="form-control" rows="5" name="bio" id="bio" th:text="${user.bio}"></textarea>
                 </div>
